// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Solid AdvancedRef 1`] = `
"import { Show, on, createEffect, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicRefComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  function onBlur() {
    // Maintain focus
    inputRef.focus();
  }

  function lowerCaseName() {
    return name().toLowerCase();
  }

  let inputRef;
  let inputNoArgRef;

  function onUpdateFn_0() {
    console.log(\\"Received an update\\");
  }
  createEffect(on(() => [inputRef, inputNoArgRef], onUpdateFn_0));

  return (
    <div>
      <Show when={props.showInput}>
        <>
          <input
            class={css({
              color: \\"red\\",
            })}
            ref={inputRef}
            value={name()}
            onBlur={(event) => onBlur()}
            onInput={(event) => setName(event.target.value)}
          />
          <label for=\\"cars\\" ref={inputNoArgRef}>
            Choose a car:
          </label>
          <select name=\\"cars\\" id=\\"cars\\">
            <option value=\\"supra\\">GR Supra</option>
            <option value=\\"86\\">GR 86</option>
          </select>
        </>
      </Show>
      Hello
      {lowerCaseName()}! I can run in React, Qwik, Vue, Solid, or Web Component!
    </div>
  );
}

export default MyBasicRefComponent;
"
`;

exports[`Solid AdvancedRef 2`] = `
"import { Show, on, createEffect, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicRefComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  function onBlur() {
    // Maintain focus
    inputRef.focus();
  }

  function lowerCaseName() {
    return name().toLowerCase();
  }

  let inputRef;
  let inputNoArgRef;

  function onUpdateFn_0() {
    console.log(\\"Received an update\\");
  }
  createEffect(on(() => [inputRef, inputNoArgRef], onUpdateFn_0));

  return (
    <>
      <div>
        <Show when={props.showInput}>
          <>
            <input
              class=\\"input-d2c6e094\\"
              ref={inputRef}
              value={name()}
              onBlur={(event) => onBlur()}
              onInput={(event) => setName(event.target.value)}
            />
            <label for=\\"cars\\" ref={inputNoArgRef}>
              Choose a car:
            </label>
            <select name=\\"cars\\" id=\\"cars\\">
              <option value=\\"supra\\">GR Supra</option>
              <option value=\\"86\\">GR 86</option>
            </select>
          </>
        </Show>
        Hello
        {lowerCaseName()}! I can run in React, Qwik, Vue, Solid, or Web
        Component!
      </div>
      <style jsx>{\`
        .input-d2c6e094 {
          color: red;
        }
      \`}</style>
    </>
  );
}

export default MyBasicRefComponent;
"
`;

exports[`Solid Basic 1`] = `
"import { createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

export const DEFAULT_VALUES = {
  name: \\"Steve\\",
};

function MyBasicComponent(props) {
  const [name, setName] = createSignal(\\"Steve\\");

  function underscore_fn_name() {
    return \\"bar\\";
  }

  return (
    <div
      class={
        \\"test \\" +
        css({
          padding: \\"10px\\",
        })
      }
    >
      <input
        value={DEFAULT_VALUES.name || name()}
        onInput={(myEvent) => setName(myEvent.target.value)}
      />
      Hello! I can run in React, Vue, Solid, or Liquid!
    </div>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid Basic 2`] = `
"import { Show, For, createSignal } from \\"solid-js\\";

function MyBasicForShowComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  const [names, setNames] = createSignal([\\"Steve\\", \\"PatrickJS\\"]);

  return (
    <div>
      <For each={names()}>
        {(person, _index) => {
          const index = _index();
          return (
            <Show when={person === name()}>
              <input
                value={name()}
                onInput={(event) => {
                  setName(event.target.value + \\" and \\" + person);
                }}
              />
              Hello
              {person}! I can run in Qwik, Web Component, React, Vue, Solid, or
              Liquid!
            </Show>
          );
        }}
      </For>
    </div>
  );
}

export default MyBasicForShowComponent;
"
`;

exports[`Solid Basic 3`] = `
"import { createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

export const DEFAULT_VALUES = {
  name: \\"Steve\\",
};

function MyBasicComponent(props) {
  const [name, setName] = createSignal(\\"Steve\\");

  function underscore_fn_name() {
    return \\"bar\\";
  }

  return (
    <>
      <div class=\\"test div-0b642428\\">
        <input
          value={DEFAULT_VALUES.name || name()}
          onInput={(myEvent) => setName(myEvent.target.value)}
        />
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
      <style jsx>{\`
        .div-0b642428 {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid Basic 4`] = `
"import { Show, For, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicForShowComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  const [names, setNames] = createSignal([\\"Steve\\", \\"PatrickJS\\"]);

  return (
    <>
      <div>
        <For each={names()}>
          {(person, _index) => {
            const index = _index();
            return (
              <Show when={person === name()}>
                <input
                  value={name()}
                  onInput={(event) => {
                    setName(event.target.value + \\" and \\" + person);
                  }}
                />
                Hello
                {person}! I can run in Qwik, Web Component, React, Vue, Solid,
                or Liquid!
              </Show>
            );
          }}
        </For>
      </div>
    </>
  );
}

export default MyBasicForShowComponent;
"
`;

exports[`Solid Basic Context 1`] = `
"import { useContext, onMount, createSignal } from \\"solid-js\\";
import { Dynamic } from \\"solid-js/web\\";

import { Injector, createInjector, MyService } from \\"@dummy/injection-js\\";

function MyBasicComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  function onChange() {
    const change = myService.method(\\"change\\");
    console.log(change);
  }

  const myService = useContext(MyService);

  onMount(() => {
    const bye = myService.method(\\"hi\\");
    console.log(bye);
  });

  return (
    <Dynamic component={Injector.Provider}>
      <div>
        {myService.method(\\"hello\\") + name()}
        Hello! I can run in React, Vue, Solid, or Liquid!
        <input onInput={(event) => onChange} />
      </div>
    </Dynamic>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid Basic Context 2`] = `
"import { useContext, onMount, createSignal } from \\"solid-js\\";
import { Dynamic } from \\"solid-js/web\\";

import { css } from \\"solid-styled-components\\";

import { Injector, createInjector, MyService } from \\"@dummy/injection-js\\";

function MyBasicComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  function onChange() {
    const change = myService.method(\\"change\\");
    console.log(change);
  }

  const myService = useContext(MyService);

  onMount(() => {
    const bye = myService.method(\\"hi\\");
    console.log(bye);
  });

  return (
    <>
      <Dynamic component={Injector.Provider}>
        <div>
          {myService.method(\\"hello\\") + name()}
          Hello! I can run in React, Vue, Solid, or Liquid!
          <input onInput={(event) => onChange} />
        </div>
      </Dynamic>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid Basic OnMount Update 1`] = `
"import { onMount, createSignal } from \\"solid-js\\";

function MyBasicOnMountUpdateComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  const [names, setNames] = createSignal([\\"Steve\\", \\"PatrickJS\\"]);

  onMount(() => {
    setName(\\"PatrickJS onMount\\" + props.bye);
  });

  return (
    <div>
      Hello
      {name()}
    </div>
  );
}

export default MyBasicOnMountUpdateComponent;
"
`;

exports[`Solid Basic OnMount Update 2`] = `
"import { onMount, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicOnMountUpdateComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  const [names, setNames] = createSignal([\\"Steve\\", \\"PatrickJS\\"]);

  onMount(() => {
    setName(\\"PatrickJS onMount\\" + props.bye);
  });

  return (
    <>
      <div>
        Hello
        {name()}
      </div>
    </>
  );
}

export default MyBasicOnMountUpdateComponent;
"
`;

exports[`Solid Basic Outputs 1`] = `
"import { onMount, createSignal } from \\"solid-js\\";

function MyBasicOutputsComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  onMount(() => {
    props.onMessage(name());
    props.onEvent(props.message);
  });

  return <div></div>;
}

export default MyBasicOutputsComponent;
"
`;

exports[`Solid Basic Outputs 2`] = `
"import { onMount, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicOutputsComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  onMount(() => {
    props.onMessage(name());
    props.onEvent(props.message);
  });

  return (
    <>
      <div></div>
    </>
  );
}

export default MyBasicOutputsComponent;
"
`;

exports[`Solid Basic Outputs Meta 1`] = `
"import { onMount, createSignal } from \\"solid-js\\";

function MyBasicOutputsComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  onMount(() => {
    props.onMessage(name());
    props.onEvent(props.message);
  });

  return <div></div>;
}

export default MyBasicOutputsComponent;
"
`;

exports[`Solid Basic Outputs Meta 2`] = `
"import { onMount, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicOutputsComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  onMount(() => {
    props.onMessage(name());
    props.onEvent(props.message);
  });

  return (
    <>
      <div></div>
    </>
  );
}

export default MyBasicOutputsComponent;
"
`;

exports[`Solid BasicChildComponent 1`] = `
"import { createSignal } from \\"solid-js\\";

import MyBasicComponent from \\"./basic.raw\\";
import MyBasicOnMountUpdateComponent from \\"./basic-onMount-update.raw\\";

function MyBasicChildComponent(props) {
  const [name, setName] = createSignal(\\"Steve\\");

  const [dev, setDev] = createSignal(\\"PatrickJS\\");

  return (
    <div>
      <MyBasicComponent id={dev()}></MyBasicComponent>
      <div>
        <MyBasicOnMountUpdateComponent
          hi={name()}
          bye={dev()}
        ></MyBasicOnMountUpdateComponent>
      </div>
    </div>
  );
}

export default MyBasicChildComponent;
"
`;

exports[`Solid BasicChildComponent 2`] = `
"import { createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

import MyBasicComponent from \\"./basic.raw\\";
import MyBasicOnMountUpdateComponent from \\"./basic-onMount-update.raw\\";

function MyBasicChildComponent(props) {
  const [name, setName] = createSignal(\\"Steve\\");

  const [dev, setDev] = createSignal(\\"PatrickJS\\");

  return (
    <>
      <div>
        <MyBasicComponent id={dev()}></MyBasicComponent>
        <div>
          <MyBasicOnMountUpdateComponent
            hi={name()}
            bye={dev()}
          ></MyBasicOnMountUpdateComponent>
        </div>
      </div>
    </>
  );
}

export default MyBasicChildComponent;
"
`;

exports[`Solid BasicFor 1`] = `
"import { For, onMount, createSignal } from \\"solid-js\\";

function MyBasicForComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  const [names, setNames] = createSignal([\\"Steve\\", \\"PatrickJS\\"]);

  onMount(() => {
    console.log(\\"onMount code\\");
  });

  return (
    <div>
      <For each={names()}>
        {(person, _index) => {
          const index = _index();
          return (
            <>
              <input
                value={name()}
                onInput={(event) => {
                  setName(event.target.value + \\" and \\" + person);
                }}
              />
              Hello
              {person}! I can run in Qwik, Web Component, React, Vue, Solid, or
              Liquid!
            </>
          );
        }}
      </For>
    </div>
  );
}

export default MyBasicForComponent;
"
`;

exports[`Solid BasicFor 2`] = `
"import { For, onMount, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicForComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  const [names, setNames] = createSignal([\\"Steve\\", \\"PatrickJS\\"]);

  onMount(() => {
    console.log(\\"onMount code\\");
  });

  return (
    <>
      <div>
        <For each={names()}>
          {(person, _index) => {
            const index = _index();
            return (
              <>
                <input
                  value={name()}
                  onInput={(event) => {
                    setName(event.target.value + \\" and \\" + person);
                  }}
                />
                Hello
                {person}! I can run in Qwik, Web Component, React, Vue, Solid,
                or Liquid!
              </>
            );
          }}
        </For>
      </div>
    </>
  );
}

export default MyBasicForComponent;
"
`;

exports[`Solid BasicRef 1`] = `
"import { Show, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicRefComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  function onBlur() {
    // Maintain focus
    inputRef.focus();
  }

  function lowerCaseName() {
    return name().toLowerCase();
  }

  let inputRef;
  let inputNoArgRef;

  return (
    <div>
      <Show when={props.showInput}>
        <>
          <input
            class={css({
              color: \\"red\\",
            })}
            ref={inputRef}
            value={name()}
            onBlur={(event) => onBlur()}
            onInput={(event) => setName(event.target.value)}
          />
          <label for=\\"cars\\" ref={inputNoArgRef}>
            Choose a car:
          </label>
          <select name=\\"cars\\" id=\\"cars\\">
            <option value=\\"supra\\">GR Supra</option>
            <option value=\\"86\\">GR 86</option>
          </select>
        </>
      </Show>
      Hello
      {lowerCaseName()}! I can run in React, Qwik, Vue, Solid, or Web Component!
    </div>
  );
}

export default MyBasicRefComponent;
"
`;

exports[`Solid BasicRef 2`] = `
"import { Show, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicRefComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  function onBlur() {
    // Maintain focus
    inputRef.focus();
  }

  function lowerCaseName() {
    return name().toLowerCase();
  }

  let inputRef;
  let inputNoArgRef;

  return (
    <>
      <div>
        <Show when={props.showInput}>
          <>
            <input
              class=\\"input-a7d46d4c\\"
              ref={inputRef}
              value={name()}
              onBlur={(event) => onBlur()}
              onInput={(event) => setName(event.target.value)}
            />
            <label for=\\"cars\\" ref={inputNoArgRef}>
              Choose a car:
            </label>
            <select name=\\"cars\\" id=\\"cars\\">
              <option value=\\"supra\\">GR Supra</option>
              <option value=\\"86\\">GR 86</option>
            </select>
          </>
        </Show>
        Hello
        {lowerCaseName()}! I can run in React, Qwik, Vue, Solid, or Web
        Component!
      </div>
      <style jsx>{\`
        .input-a7d46d4c {
          color: red;
        }
      \`}</style>
    </>
  );
}

export default MyBasicRefComponent;
"
`;

exports[`Solid BasicRefAssignment 1`] = `
"import { createSignal } from \\"solid-js\\";

function MyBasicRefAssignmentComponent(props) {
  function handlerClick(event) {
    event.preventDefault();
    console.log(\\"current value\\", holdValueRef);
    holdValueRef = holdValueRef + \\"JS\\";
  }

  return (
    <div>
      <button onClick={(evt) => handlerClick(evt)}>Click</button>
    </div>
  );
}

export default MyBasicRefAssignmentComponent;
"
`;

exports[`Solid BasicRefAssignment 2`] = `
"import { createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicRefAssignmentComponent(props) {
  function handlerClick(event) {
    event.preventDefault();
    console.log(\\"current value\\", holdValueRef);
    holdValueRef = holdValueRef + \\"JS\\";
  }

  return (
    <>
      <div>
        <button onClick={(evt) => handlerClick(evt)}>Click</button>
      </div>
    </>
  );
}

export default MyBasicRefAssignmentComponent;
"
`;

exports[`Solid BasicRefPrevious 1`] = `
"import { on, createEffect, createSignal } from \\"solid-js\\";

export function usePrevious<T>(value: T) {
  // The ref object is a generic container whose current property is mutable ...
  // ... and can hold any value, similar to an instance property on a class
  let ref = useRef<T>(null); // Store current value in ref

  onUpdate(() => {
    ref = value;
  }, [value]); // Only re-run if value changes
  // Return previous value (happens before update in useEffect above)

  return ref;
}

function MyPreviousComponent(props) {
  const [count, setCount] = createSignal(0);

  function onUpdateFn_0() {
    prevCount = count();
  }
  createEffect(on(() => [count()], onUpdateFn_0));

  return (
    <div>
      <h1>
        Now:
        {count()}, before:
        {prevCount}
      </h1>
      <button onClick={(event) => setCount(1)}>Increment</button>
    </div>
  );
}

export default MyPreviousComponent;
"
`;

exports[`Solid BasicRefPrevious 2`] = `
"import { on, createEffect, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

export function usePrevious<T>(value: T) {
  // The ref object is a generic container whose current property is mutable ...
  // ... and can hold any value, similar to an instance property on a class
  let ref = useRef<T>(null); // Store current value in ref

  onUpdate(() => {
    ref = value;
  }, [value]); // Only re-run if value changes
  // Return previous value (happens before update in useEffect above)

  return ref;
}

function MyPreviousComponent(props) {
  const [count, setCount] = createSignal(0);

  function onUpdateFn_0() {
    prevCount = count();
  }
  createEffect(on(() => [count()], onUpdateFn_0));

  return (
    <>
      <div>
        <h1>
          Now:
          {count()}, before:
          {prevCount}
        </h1>
        <button onClick={(event) => setCount(1)}>Increment</button>
      </div>
    </>
  );
}

export default MyPreviousComponent;
"
`;

exports[`Solid Button 1`] = `
"import { Show } from \\"solid-js\\";

function Button(props) {
  return (
    <>
      <Show when={props.link}>
        <a
          {...props.attributes}
          href={props.link}
          target={props.openLinkInNewTab ? \\"_blank\\" : undefined}
        >
          {props.text}
        </a>
      </Show>
      <Show when={!props.link}>
        <button {...props.attributes} type=\\"button\\">
          {props.text}
        </button>
      </Show>
    </>
  );
}

export default Button;
"
`;

exports[`Solid Button 2`] = `
"import { Show } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function Button(props) {
  return (
    <>
      <>
        <Show when={props.link}>
          <a
            {...props.attributes}
            href={props.link}
            target={props.openLinkInNewTab ? \\"_blank\\" : undefined}
          >
            {props.text}
          </a>
        </Show>
        <Show when={!props.link}>
          <button {...props.attributes} type=\\"button\\">
            {props.text}
          </button>
        </Show>
      </>
    </>
  );
}

export default Button;
"
`;

exports[`Solid Columns 1`] = `
"import { For, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function Column(props) {
  function getColumns() {
    return props.columns || [];
  }

  function getGutterSize() {
    return typeof props.space === \\"number\\" ? props.space || 0 : 20;
  }

  function getWidth(index) {
    const columns = this.getColumns();
    return (columns[index] && columns[index].width) || 100 / columns.length;
  }

  function getColumnCssWidth(index) {
    const columns = this.getColumns();
    const gutterSize = this.getGutterSize();
    const subtractWidth = (gutterSize * (columns.length - 1)) / columns.length;
    return \`calc(\${this.getWidth(index)}% - \${subtractWidth}px)\`;
  }

  return (
    <div
      class={
        \\"builder-columns \\" +
        css({
          display: \\"flex\\",
          flexDirection: \\"column\\",
          alignItems: \\"stretch\\",
          lineHeight: \\"normal\\",
          \\"@media (max-width: 999px)\\": {
            flexDirection: \\"row\\",
          },
          \\"@media (max-width: 639px)\\": {
            flexDirection: \\"row-reverse\\",
          },
        })
      }
    >
      <For each={props.columns}>
        {(column, _index) => {
          const index = _index();
          return (
            <div
              class={
                \\"builder-column \\" +
                css({
                  flexGrow: \\"1\\",
                })
              }
            >
              {column.content}
              {index}
            </div>
          );
        }}
      </For>
    </div>
  );
}

export default Column;
"
`;

exports[`Solid Columns 2`] = `
"import { For, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function Column(props) {
  function getColumns() {
    return props.columns || [];
  }

  function getGutterSize() {
    return typeof props.space === \\"number\\" ? props.space || 0 : 20;
  }

  function getWidth(index) {
    const columns = this.getColumns();
    return (columns[index] && columns[index].width) || 100 / columns.length;
  }

  function getColumnCssWidth(index) {
    const columns = this.getColumns();
    const gutterSize = this.getGutterSize();
    const subtractWidth = (gutterSize * (columns.length - 1)) / columns.length;
    return \`calc(\${this.getWidth(index)}% - \${subtractWidth}px)\`;
  }

  return (
    <>
      <div class=\\"builder-columns div-1abbe6b8\\">
        <For each={props.columns}>
          {(column, _index) => {
            const index = _index();
            return (
              <div class=\\"builder-column div-1abbe6b8-2\\">
                {column.content}
                {index}
              </div>
            );
          }}
        </For>
      </div>
      <style jsx>{\`
        .div-1abbe6b8 {
          display: flex;
          flex-direction: column;
          align-items: stretch;
          line-height: normal;
        }
        @media (max-width: 999px) {
          .div-1abbe6b8 {
            flex-direction: row;
          }
        }
        @media (max-width: 639px) {
          .div-1abbe6b8 {
            flex-direction: row-reverse;
          }
        }
        .div-1abbe6b8-2 {
          flex-grow: 1;
        }
      \`}</style>
    </>
  );
}

export default Column;
"
`;

exports[`Solid ContentSlotHtml 1`] = `
"function ContentSlotCode(props) {
  return (
    <div>
      <Slot name={props.slotTesting}></Slot>
      <div>
        <hr />
      </div>
      <div>
        <Slot></Slot>
      </div>
    </div>
  );
}

export default ContentSlotCode;
"
`;

exports[`Solid ContentSlotHtml 2`] = `
"import { css } from \\"solid-styled-components\\";

function ContentSlotCode(props) {
  return (
    <>
      <div>
        <Slot name={props.slotTesting}></Slot>
        <div>
          <hr />
        </div>
        <div>
          <Slot></Slot>
        </div>
      </div>
    </>
  );
}

export default ContentSlotCode;
"
`;

exports[`Solid ContentSlotJSX 1`] = `
"import { Show } from \\"solid-js\\";

function ContentSlotJsxCode(props) {
  return (
    <div>
      <Show when={props.slotTesting}>
        <div>{props.slotTesting}</div>
      </Show>
      <div>
        <hr />
      </div>
      <div>{props.children}</div>
    </div>
  );
}

export default ContentSlotJsxCode;
"
`;

exports[`Solid ContentSlotJSX 2`] = `
"import { Show } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function ContentSlotJsxCode(props) {
  return (
    <>
      <div>
        <Show when={props.slotTesting}>
          <div>{props.slotTesting}</div>
        </Show>
        <div>
          <hr />
        </div>
        <div>{props.children}</div>
      </div>
    </>
  );
}

export default ContentSlotJsxCode;
"
`;

exports[`Solid CustomCode 1`] = `
"import { onMount, createSignal } from \\"solid-js\\";

function CustomCode(props) {
  const [scriptsInserted, setScriptsInserted] = createSignal([]);

  const [scriptsRun, setScriptsRun] = createSignal([]);

  function findAndRunScripts() {
    // TODO: Move this function to standalone one in '@builder.io/utils'
    if (elem && typeof window !== \\"undefined\\") {
      /** @type {HTMLScriptElement[]} */
      const scripts = elem.getElementsByTagName(\\"script\\");

      for (let i = 0; i < scripts.length; i++) {
        const script = scripts[i];

        if (script.src) {
          if (scriptsInserted().includes(script.src)) {
            continue;
          }

          scriptsInserted().push(script.src);
          const newScript = document.createElement(\\"script\\");
          newScript.async = true;
          newScript.src = script.src;
          document.head.appendChild(newScript);
        } else if (
          !script.type ||
          [
            \\"text/javascript\\",
            \\"application/javascript\\",
            \\"application/ecmascript\\",
          ].includes(script.type)
        ) {
          if (scriptsRun().includes(script.innerText)) {
            continue;
          }

          try {
            scriptsRun().push(script.innerText);
            new Function(script.innerText)();
          } catch (error) {
            console.warn(\\"\`CustomCode\`: Error running script:\\", error);
          }
        }
      }
    }
  }

  let elem;

  onMount(() => {
    findAndRunScripts();
  });

  return (
    <div
      class={
        \\"builder-custom-code\\" + (props.replaceNodes ? \\" replace-nodes\\" : \\"\\")
      }
      ref={elem}
      innerHTML={props.code}
    ></div>
  );
}

export default CustomCode;
"
`;

exports[`Solid CustomCode 2`] = `
"import { onMount, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function CustomCode(props) {
  const [scriptsInserted, setScriptsInserted] = createSignal([]);

  const [scriptsRun, setScriptsRun] = createSignal([]);

  function findAndRunScripts() {
    // TODO: Move this function to standalone one in '@builder.io/utils'
    if (elem && typeof window !== \\"undefined\\") {
      /** @type {HTMLScriptElement[]} */
      const scripts = elem.getElementsByTagName(\\"script\\");

      for (let i = 0; i < scripts.length; i++) {
        const script = scripts[i];

        if (script.src) {
          if (scriptsInserted().includes(script.src)) {
            continue;
          }

          scriptsInserted().push(script.src);
          const newScript = document.createElement(\\"script\\");
          newScript.async = true;
          newScript.src = script.src;
          document.head.appendChild(newScript);
        } else if (
          !script.type ||
          [
            \\"text/javascript\\",
            \\"application/javascript\\",
            \\"application/ecmascript\\",
          ].includes(script.type)
        ) {
          if (scriptsRun().includes(script.innerText)) {
            continue;
          }

          try {
            scriptsRun().push(script.innerText);
            new Function(script.innerText)();
          } catch (error) {
            console.warn(\\"\`CustomCode\`: Error running script:\\", error);
          }
        }
      }
    }
  }

  let elem;

  onMount(() => {
    findAndRunScripts();
  });

  return (
    <>
      <div
        class={
          \\"builder-custom-code\\" + (props.replaceNodes ? \\" replace-nodes\\" : \\"\\")
        }
        ref={elem}
        innerHTML={props.code}
      ></div>
    </>
  );
}

export default CustomCode;
"
`;

exports[`Solid Embed 1`] = `
"import { onMount, createSignal } from \\"solid-js\\";

function CustomCode(props) {
  const [scriptsInserted, setScriptsInserted] = createSignal([]);

  const [scriptsRun, setScriptsRun] = createSignal([]);

  function findAndRunScripts() {
    // TODO: Move this function to standalone one in '@builder.io/utils'
    if (elem && typeof window !== \\"undefined\\") {
      /** @type {HTMLScriptElement[]} */
      const scripts = elem.getElementsByTagName(\\"script\\");

      for (let i = 0; i < scripts.length; i++) {
        const script = scripts[i];

        if (script.src) {
          if (scriptsInserted().includes(script.src)) {
            continue;
          }

          scriptsInserted().push(script.src);
          const newScript = document.createElement(\\"script\\");
          newScript.async = true;
          newScript.src = script.src;
          document.head.appendChild(newScript);
        } else if (
          !script.type ||
          [
            \\"text/javascript\\",
            \\"application/javascript\\",
            \\"application/ecmascript\\",
          ].includes(script.type)
        ) {
          if (scriptsRun().includes(script.innerText)) {
            continue;
          }

          try {
            scriptsRun().push(script.innerText);
            new Function(script.innerText)();
          } catch (error) {
            console.warn(\\"\`CustomCode\`: Error running script:\\", error);
          }
        }
      }
    }
  }

  let elem;

  onMount(() => {
    findAndRunScripts();
  });

  return (
    <div
      class={
        \\"builder-custom-code\\" + (props.replaceNodes ? \\" replace-nodes\\" : \\"\\")
      }
      ref={elem}
      innerHTML={props.code}
    ></div>
  );
}

export default CustomCode;
"
`;

exports[`Solid Embed 2`] = `
"import { onMount, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function CustomCode(props) {
  const [scriptsInserted, setScriptsInserted] = createSignal([]);

  const [scriptsRun, setScriptsRun] = createSignal([]);

  function findAndRunScripts() {
    // TODO: Move this function to standalone one in '@builder.io/utils'
    if (elem && typeof window !== \\"undefined\\") {
      /** @type {HTMLScriptElement[]} */
      const scripts = elem.getElementsByTagName(\\"script\\");

      for (let i = 0; i < scripts.length; i++) {
        const script = scripts[i];

        if (script.src) {
          if (scriptsInserted().includes(script.src)) {
            continue;
          }

          scriptsInserted().push(script.src);
          const newScript = document.createElement(\\"script\\");
          newScript.async = true;
          newScript.src = script.src;
          document.head.appendChild(newScript);
        } else if (
          !script.type ||
          [
            \\"text/javascript\\",
            \\"application/javascript\\",
            \\"application/ecmascript\\",
          ].includes(script.type)
        ) {
          if (scriptsRun().includes(script.innerText)) {
            continue;
          }

          try {
            scriptsRun().push(script.innerText);
            new Function(script.innerText)();
          } catch (error) {
            console.warn(\\"\`CustomCode\`: Error running script:\\", error);
          }
        }
      }
    }
  }

  let elem;

  onMount(() => {
    findAndRunScripts();
  });

  return (
    <>
      <div
        class={
          \\"builder-custom-code\\" + (props.replaceNodes ? \\" replace-nodes\\" : \\"\\")
        }
        ref={elem}
        innerHTML={props.code}
      ></div>
    </>
  );
}

export default CustomCode;
"
`;

exports[`Solid Form 1`] = `
"import { Show, For, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

import { BuilderBlock as BuilderBlockComponent } from \\"@fake\\";
import { Builder, builder } from \\"@builder.io/sdk\\";
import { BuilderBlocks } from \\"@fake\\";
import { set } from \\"@fake\\";
import { get } from \\"@fake\\";

function FormComponent(props) {
  const [formState, setFormState] = createSignal(\\"unsubmitted\\");

  const [responseData, setResponseData] = createSignal(null);

  const [formErrorMessage, setFormErrorMessage] = createSignal(\\"\\");

  function submissionState() {
    return (Builder.isEditing && props.previewState) || formState();
  }

  function onSubmit(event) {
    const sendWithJs = props.sendWithJs || props.sendSubmissionsTo === \\"email\\";

    if (props.sendSubmissionsTo === \\"zapier\\") {
      event.preventDefault();
    } else if (sendWithJs) {
      if (!(props.action || props.sendSubmissionsTo === \\"email\\")) {
        event.preventDefault();
        return;
      }

      event.preventDefault();
      const el = event.currentTarget;
      const headers = props.customHeaders || {};
      let body;
      const formData = new FormData(el); // TODO: maybe support null

      const formPairs = Array.from(
        event.currentTarget.querySelectorAll(\\"input,select,textarea\\")
      )
        .filter((el) => !!el.name)
        .map((el) => {
          let value;
          const key = el.name;

          if (el instanceof HTMLInputElement) {
            if (el.type === \\"radio\\") {
              if (el.checked) {
                value = el.name;
                return {
                  key,
                  value,
                };
              }
            } else if (el.type === \\"checkbox\\") {
              value = el.checked;
            } else if (el.type === \\"number\\" || el.type === \\"range\\") {
              const num = el.valueAsNumber;

              if (!isNaN(num)) {
                value = num;
              }
            } else if (el.type === \\"file\\") {
              // TODO: one vs multiple files
              value = el.files;
            } else {
              value = el.value;
            }
          } else {
            value = el.value;
          }

          return {
            key,
            value,
          };
        });
      let contentType = props.contentType;

      if (props.sendSubmissionsTo === \\"email\\") {
        contentType = \\"multipart/form-data\\";
      }

      Array.from(formPairs).forEach(({ value }) => {
        if (
          value instanceof File ||
          (Array.isArray(value) && value[0] instanceof File) ||
          value instanceof FileList
        ) {
          contentType = \\"multipart/form-data\\";
        }
      }); // TODO: send as urlEncoded or multipart by default
      // because of ease of use and reliability in browser API
      // for encoding the form?

      if (contentType !== \\"application/json\\") {
        body = formData;
      } else {
        // Json
        const json = {};
        Array.from(formPairs).forEach(({ value, key }) => {
          set(json, key, value);
        });
        body = JSON.stringify(json);
      }

      if (contentType && contentType !== \\"multipart/form-data\\") {
        if (
          /* Zapier doesn't allow content-type header to be sent from browsers */
          !(sendWithJs && props.action?.includes(\\"zapier.com\\"))
        ) {
          headers[\\"content-type\\"] = contentType;
        }
      }

      const presubmitEvent = new CustomEvent(\\"presubmit\\", {
        detail: {
          body,
        },
      });

      if (formRef) {
        formRef.dispatchEvent(presubmitEvent);

        if (presubmitEvent.defaultPrevented) {
          return;
        }
      }

      setFormState(\\"sending\\");
      const formUrl = \`\${
        builder.env === \\"dev\\" ? \\"http://localhost:5000\\" : \\"https://builder.io\\"
      }/api/v1/form-submit?apiKey=\${builder.apiKey}&to=\${btoa(
        props.sendSubmissionsToEmail || \\"\\"
      )}&name=\${encodeURIComponent(props.name || \\"\\")}\`;
      fetch(
        props.sendSubmissionsTo === \\"email\\" ? formUrl : props.action,
        /* TODO: throw error if no action URL */
        {
          body,
          headers,
          method: props.method || \\"post\\",
        }
      ).then(
        async (res) => {
          let body;
          const contentType = res.headers.get(\\"content-type\\");

          if (contentType && contentType.indexOf(\\"application/json\\") !== -1) {
            body = await res.json();
          } else {
            body = await res.text();
          }

          if (!res.ok && props.errorMessagePath) {
            /* TODO: allow supplying an error formatter function */
            let message = get(body, props.errorMessagePath);

            if (message) {
              if (typeof message !== \\"string\\") {
                /* TODO: ideally convert json to yaml so it woul dbe like
           error: - email has been taken */
                message = JSON.stringify(message);
              }

              setFormErrorMessage(message);
            }
          }

          setResponseData(body);
          setFormState(res.ok ? \\"success\\" : \\"error\\");

          if (res.ok) {
            const submitSuccessEvent = new CustomEvent(\\"submit:success\\", {
              detail: {
                res,
                body,
              },
            });

            if (formRef) {
              formRef.dispatchEvent(submitSuccessEvent);

              if (submitSuccessEvent.defaultPrevented) {
                return;
              }
              /* TODO: option to turn this on/off? */

              if (props.resetFormOnSubmit !== false) {
                formRef.reset();
              }
            }
            /* TODO: client side route event first that can be preventDefaulted */

            if (props.successUrl) {
              if (formRef) {
                const event = new CustomEvent(\\"route\\", {
                  detail: {
                    url: props.successUrl,
                  },
                });
                formRef.dispatchEvent(event);

                if (!event.defaultPrevented) {
                  location.href = props.successUrl;
                }
              } else {
                location.href = props.successUrl;
              }
            }
          }
        },
        (err) => {
          const submitErrorEvent = new CustomEvent(\\"submit:error\\", {
            detail: {
              error: err,
            },
          });

          if (formRef) {
            formRef.dispatchEvent(submitErrorEvent);

            if (submitErrorEvent.defaultPrevented) {
              return;
            }
          }

          setResponseData(err);
          setFormState(\\"error\\");
        }
      );
    }
  }

  let formRef;

  return (
    <form
      {...props.attributes}
      validate={props.validate}
      ref={formRef}
      action={!props.sendWithJs && props.action}
      method={props.method}
      name={props.name}
      onSubmit={(event) => onSubmit(event)}
    >
      <Show when={props.builderBlock && props.builderBlock.children}>
        <For each={props.builderBlock?.children}>
          {(block, _index) => {
            const index = _index();
            return (
              <BuilderBlockComponent
                key={block.id}
                block={block}
                index={index}
              ></BuilderBlockComponent>
            );
          }}
        </For>
      </Show>
      <Show when={submissionState() === \\"error\\"}>
        <BuilderBlocks
          dataPath=\\"errorMessage\\"
          blocks={props.errorMessage}
        ></BuilderBlocks>
      </Show>
      <Show when={submissionState() === \\"sending\\"}>
        <BuilderBlocks
          dataPath=\\"sendingMessage\\"
          blocks={props.sendingMessage}
        ></BuilderBlocks>
      </Show>
      <Show when={submissionState() === \\"error\\" && responseData()}>
        <pre
          class={
            \\"builder-form-error-text \\" +
            css({
              padding: \\"10px\\",
              color: \\"red\\",
              textAlign: \\"center\\",
            })
          }
        >
          {JSON.stringify(responseData(), null, 2)}
        </pre>
      </Show>
      <Show when={submissionState() === \\"success\\"}>
        <BuilderBlocks
          dataPath=\\"successMessage\\"
          blocks={props.successMessage}
        ></BuilderBlocks>
      </Show>
    </form>
  );
}

export default FormComponent;
"
`;

exports[`Solid Form 2`] = `
"import { Show, For, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

import { BuilderBlock as BuilderBlockComponent } from \\"@fake\\";
import { Builder, builder } from \\"@builder.io/sdk\\";
import { BuilderBlocks } from \\"@fake\\";
import { set } from \\"@fake\\";
import { get } from \\"@fake\\";

function FormComponent(props) {
  const [formState, setFormState] = createSignal(\\"unsubmitted\\");

  const [responseData, setResponseData] = createSignal(null);

  const [formErrorMessage, setFormErrorMessage] = createSignal(\\"\\");

  function submissionState() {
    return (Builder.isEditing && props.previewState) || formState();
  }

  function onSubmit(event) {
    const sendWithJs = props.sendWithJs || props.sendSubmissionsTo === \\"email\\";

    if (props.sendSubmissionsTo === \\"zapier\\") {
      event.preventDefault();
    } else if (sendWithJs) {
      if (!(props.action || props.sendSubmissionsTo === \\"email\\")) {
        event.preventDefault();
        return;
      }

      event.preventDefault();
      const el = event.currentTarget;
      const headers = props.customHeaders || {};
      let body;
      const formData = new FormData(el); // TODO: maybe support null

      const formPairs = Array.from(
        event.currentTarget.querySelectorAll(\\"input,select,textarea\\")
      )
        .filter((el) => !!el.name)
        .map((el) => {
          let value;
          const key = el.name;

          if (el instanceof HTMLInputElement) {
            if (el.type === \\"radio\\") {
              if (el.checked) {
                value = el.name;
                return {
                  key,
                  value,
                };
              }
            } else if (el.type === \\"checkbox\\") {
              value = el.checked;
            } else if (el.type === \\"number\\" || el.type === \\"range\\") {
              const num = el.valueAsNumber;

              if (!isNaN(num)) {
                value = num;
              }
            } else if (el.type === \\"file\\") {
              // TODO: one vs multiple files
              value = el.files;
            } else {
              value = el.value;
            }
          } else {
            value = el.value;
          }

          return {
            key,
            value,
          };
        });
      let contentType = props.contentType;

      if (props.sendSubmissionsTo === \\"email\\") {
        contentType = \\"multipart/form-data\\";
      }

      Array.from(formPairs).forEach(({ value }) => {
        if (
          value instanceof File ||
          (Array.isArray(value) && value[0] instanceof File) ||
          value instanceof FileList
        ) {
          contentType = \\"multipart/form-data\\";
        }
      }); // TODO: send as urlEncoded or multipart by default
      // because of ease of use and reliability in browser API
      // for encoding the form?

      if (contentType !== \\"application/json\\") {
        body = formData;
      } else {
        // Json
        const json = {};
        Array.from(formPairs).forEach(({ value, key }) => {
          set(json, key, value);
        });
        body = JSON.stringify(json);
      }

      if (contentType && contentType !== \\"multipart/form-data\\") {
        if (
          /* Zapier doesn't allow content-type header to be sent from browsers */
          !(sendWithJs && props.action?.includes(\\"zapier.com\\"))
        ) {
          headers[\\"content-type\\"] = contentType;
        }
      }

      const presubmitEvent = new CustomEvent(\\"presubmit\\", {
        detail: {
          body,
        },
      });

      if (formRef) {
        formRef.dispatchEvent(presubmitEvent);

        if (presubmitEvent.defaultPrevented) {
          return;
        }
      }

      setFormState(\\"sending\\");
      const formUrl = \`\${
        builder.env === \\"dev\\" ? \\"http://localhost:5000\\" : \\"https://builder.io\\"
      }/api/v1/form-submit?apiKey=\${builder.apiKey}&to=\${btoa(
        props.sendSubmissionsToEmail || \\"\\"
      )}&name=\${encodeURIComponent(props.name || \\"\\")}\`;
      fetch(
        props.sendSubmissionsTo === \\"email\\" ? formUrl : props.action,
        /* TODO: throw error if no action URL */
        {
          body,
          headers,
          method: props.method || \\"post\\",
        }
      ).then(
        async (res) => {
          let body;
          const contentType = res.headers.get(\\"content-type\\");

          if (contentType && contentType.indexOf(\\"application/json\\") !== -1) {
            body = await res.json();
          } else {
            body = await res.text();
          }

          if (!res.ok && props.errorMessagePath) {
            /* TODO: allow supplying an error formatter function */
            let message = get(body, props.errorMessagePath);

            if (message) {
              if (typeof message !== \\"string\\") {
                /* TODO: ideally convert json to yaml so it woul dbe like
           error: - email has been taken */
                message = JSON.stringify(message);
              }

              setFormErrorMessage(message);
            }
          }

          setResponseData(body);
          setFormState(res.ok ? \\"success\\" : \\"error\\");

          if (res.ok) {
            const submitSuccessEvent = new CustomEvent(\\"submit:success\\", {
              detail: {
                res,
                body,
              },
            });

            if (formRef) {
              formRef.dispatchEvent(submitSuccessEvent);

              if (submitSuccessEvent.defaultPrevented) {
                return;
              }
              /* TODO: option to turn this on/off? */

              if (props.resetFormOnSubmit !== false) {
                formRef.reset();
              }
            }
            /* TODO: client side route event first that can be preventDefaulted */

            if (props.successUrl) {
              if (formRef) {
                const event = new CustomEvent(\\"route\\", {
                  detail: {
                    url: props.successUrl,
                  },
                });
                formRef.dispatchEvent(event);

                if (!event.defaultPrevented) {
                  location.href = props.successUrl;
                }
              } else {
                location.href = props.successUrl;
              }
            }
          }
        },
        (err) => {
          const submitErrorEvent = new CustomEvent(\\"submit:error\\", {
            detail: {
              error: err,
            },
          });

          if (formRef) {
            formRef.dispatchEvent(submitErrorEvent);

            if (submitErrorEvent.defaultPrevented) {
              return;
            }
          }

          setResponseData(err);
          setFormState(\\"error\\");
        }
      );
    }
  }

  let formRef;

  return (
    <>
      <form
        {...props.attributes}
        validate={props.validate}
        ref={formRef}
        action={!props.sendWithJs && props.action}
        method={props.method}
        name={props.name}
        onSubmit={(event) => onSubmit(event)}
      >
        <Show when={props.builderBlock && props.builderBlock.children}>
          <For each={props.builderBlock?.children}>
            {(block, _index) => {
              const index = _index();
              return (
                <BuilderBlockComponent
                  key={block.id}
                  block={block}
                  index={index}
                ></BuilderBlockComponent>
              );
            }}
          </For>
        </Show>
        <Show when={submissionState() === \\"error\\"}>
          <BuilderBlocks
            dataPath=\\"errorMessage\\"
            blocks={props.errorMessage}
          ></BuilderBlocks>
        </Show>
        <Show when={submissionState() === \\"sending\\"}>
          <BuilderBlocks
            dataPath=\\"sendingMessage\\"
            blocks={props.sendingMessage}
          ></BuilderBlocks>
        </Show>
        <Show when={submissionState() === \\"error\\" && responseData()}>
          <pre class=\\"builder-form-error-text pre-940b4794\\">
            {JSON.stringify(responseData(), null, 2)}
          </pre>
        </Show>
        <Show when={submissionState() === \\"success\\"}>
          <BuilderBlocks
            dataPath=\\"successMessage\\"
            blocks={props.successMessage}
          ></BuilderBlocks>
        </Show>
      </form>
      <style jsx>{\`
        .pre-940b4794 {
          padding: 10px;
          color: red;
          text-align: center;
        }
      \`}</style>
    </>
  );
}

export default FormComponent;
"
`;

exports[`Solid Image 1`] = `
"import { Show, onMount, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function Image(props) {
  const [scrollListener, setScrollListener] = createSignal(null);

  const [imageLoaded, setImageLoaded] = createSignal(false);

  const [load, setLoad] = createSignal(false);

  function setLoaded() {
    setImageLoaded(true);
  }

  function useLazyLoading() {
    // TODO: Add more checks here, like testing for real web browsers
    return !!props.lazy && isBrowser();
  }

  function isBrowser() {
    return (
      typeof window !== \\"undefined\\" && window.navigator.product != \\"ReactNative\\"
    );
  }

  let pictureRef;

  onMount(() => {
    if (useLazyLoading()) {
      // throttled scroll capture listener
      const listener = () => {
        if (pictureRef) {
          const rect = pictureRef.getBoundingClientRect();
          const buffer = window.innerHeight / 2;

          if (rect.top < window.innerHeight + buffer) {
            setLoad(true);
            setScrollListener(null);
            window.removeEventListener(\\"scroll\\", listener);
          }
        }
      };

      setScrollListener(listener);
      window.addEventListener(\\"scroll\\", listener, {
        capture: true,
        passive: true,
      });
      listener();
    }
  });

  return (
    <>
      <picture ref={pictureRef}>
        <Show when={!useLazyLoading() || load()}>
          <img
            class={
              \\"builder-image\\" +
              (props._class ? \\" \\" + props._class : \\"\\") +
              \\" \\" +
              css({
                opacity: \\"1\\",
                transition: \\"opacity 0.2s ease-in-out\\",
                objectFit: \\"cover\\",
                objectPosition: \\"center\\",
              })
            }
            alt={props.altText}
            aria-role={props.altText ? \\"presentation\\" : undefined}
            src={props.image}
            onLoad={(event) => setLoaded()}
            srcset={props.srcset}
            sizes={props.sizes}
          />
        </Show>
        <source srcset={props.srcset} />
      </picture>
      {props.children}
    </>
  );
}

export default Image;
"
`;

exports[`Solid Image 2`] = `
"import { Show, onMount, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function Image(props) {
  const [scrollListener, setScrollListener] = createSignal(null);

  const [imageLoaded, setImageLoaded] = createSignal(false);

  const [load, setLoad] = createSignal(false);

  function setLoaded() {
    setImageLoaded(true);
  }

  function useLazyLoading() {
    // TODO: Add more checks here, like testing for real web browsers
    return !!props.lazy && isBrowser();
  }

  function isBrowser() {
    return (
      typeof window !== \\"undefined\\" && window.navigator.product != \\"ReactNative\\"
    );
  }

  let pictureRef;

  onMount(() => {
    if (useLazyLoading()) {
      // throttled scroll capture listener
      const listener = () => {
        if (pictureRef) {
          const rect = pictureRef.getBoundingClientRect();
          const buffer = window.innerHeight / 2;

          if (rect.top < window.innerHeight + buffer) {
            setLoad(true);
            setScrollListener(null);
            window.removeEventListener(\\"scroll\\", listener);
          }
        }
      };

      setScrollListener(listener);
      window.addEventListener(\\"scroll\\", listener, {
        capture: true,
        passive: true,
      });
      listener();
    }
  });

  return (
    <>
      <>
        <picture ref={pictureRef}>
          <Show when={!useLazyLoading() || load()}>
            <img
              class={
                \\"builder-image\\" +
                (props._class ? \\" \\" + props._class : \\"\\") +
                \\" img-13e9638c\\"
              }
              alt={props.altText}
              aria-role={props.altText ? \\"presentation\\" : undefined}
              src={props.image}
              onLoad={(event) => setLoaded()}
              srcset={props.srcset}
              sizes={props.sizes}
            />
          </Show>
          <source srcset={props.srcset} />
        </picture>
        {props.children}
      </>
      <style jsx>{\`
        .img-13e9638c {
          opacity: 1;
          transition: opacity 0.2s ease-in-out;
          object-fit: cover;
          object-position: center;
        }
      \`}</style>
    </>
  );
}

export default Image;
"
`;

exports[`Solid Image State 1`] = `
"import { For, createSignal } from \\"solid-js\\";

function ImgStateComponent(props) {
  const [canShow, setCanShow] = createSignal(true);

  const [images, setImages] = createSignal([\\"http://example.com/qwik.png\\"]);

  return (
    <div>
      <For each={images()}>
        {(item, _index) => {
          const index = _index();
          return (
            <>
              <img class=\\"custom-class\\" src={item} key={itemIndex} />
            </>
          );
        }}
      </For>
    </div>
  );
}

export default ImgStateComponent;
"
`;

exports[`Solid Image State 2`] = `
"import { For, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function ImgStateComponent(props) {
  const [canShow, setCanShow] = createSignal(true);

  const [images, setImages] = createSignal([\\"http://example.com/qwik.png\\"]);

  return (
    <>
      <div>
        <For each={images()}>
          {(item, _index) => {
            const index = _index();
            return (
              <>
                <img class=\\"custom-class\\" src={item} key={itemIndex} />
              </>
            );
          }}
        </For>
      </div>
    </>
  );
}

export default ImgStateComponent;
"
`;

exports[`Solid Img 1`] = `
"import { Builder } from \\"@builder.io/sdk\\";

function ImgComponent(props) {
  return (
    <img
      {...props.attributes}
      style={{
        \\"object-fit\\": props.backgroundSize || \\"cover\\",
        \\"object-position\\": props.backgroundPosition || \\"center\\",
      }}
      key={(Builder.isEditing && props.imgSrc) || \\"default-key\\"}
      alt={props.altText}
      src={props.imgSrc}
    />
  );
}

export default ImgComponent;
"
`;

exports[`Solid Img 2`] = `
"import { css } from \\"solid-styled-components\\";

import { Builder } from \\"@builder.io/sdk\\";

function ImgComponent(props) {
  return (
    <>
      <img
        {...props.attributes}
        style={{
          \\"object-fit\\": props.backgroundSize || \\"cover\\",
          \\"object-position\\": props.backgroundPosition || \\"center\\",
        }}
        key={(Builder.isEditing && props.imgSrc) || \\"default-key\\"}
        alt={props.altText}
        src={props.imgSrc}
      />
    </>
  );
}

export default ImgComponent;
"
`;

exports[`Solid Input 1`] = `
"import { Builder } from \\"@builder.io/sdk\\";

function FormInputComponent(props) {
  return (
    <input
      {...props.attributes}
      key={
        Builder.isEditing && props.defaultValue
          ? props.defaultValue
          : \\"default-key\\"
      }
      placeholder={props.placeholder}
      type={props.type}
      name={props.name}
      value={props.value}
      defaultValue={props.defaultValue}
      required={props.required}
    />
  );
}

export default FormInputComponent;
"
`;

exports[`Solid Input 2`] = `
"import { css } from \\"solid-styled-components\\";

import { Builder } from \\"@builder.io/sdk\\";

function FormInputComponent(props) {
  return (
    <>
      <input
        {...props.attributes}
        key={
          Builder.isEditing && props.defaultValue
            ? props.defaultValue
            : \\"default-key\\"
        }
        placeholder={props.placeholder}
        type={props.type}
        name={props.name}
        value={props.value}
        defaultValue={props.defaultValue}
        required={props.required}
      />
    </>
  );
}

export default FormInputComponent;
"
`;

exports[`Solid RawText 1`] = `
"function RawText(props) {
  return (
    <span
      class={props.attributes?.class || props.attributes?.className}
      innerHTML={props.text || \\"\\"}
    ></span>
  );
}

export default RawText;
"
`;

exports[`Solid RawText 2`] = `
"import { css } from \\"solid-styled-components\\";

function RawText(props) {
  return (
    <>
      <span
        class={props.attributes?.class || props.attributes?.className}
        innerHTML={props.text || \\"\\"}
      ></span>
    </>
  );
}

export default RawText;
"
`;

exports[`Solid Remove Internal mitosis package 1`] = `
"import { createSignal } from \\"solid-js\\";

function MyBasicComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  return (
    <div>
      Hello
      {name()}! I can run in React, Qwik, Vue, Solid, or Liquid!
    </div>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid Remove Internal mitosis package 2`] = `
"import { createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  return (
    <>
      <div>
        Hello
        {name()}! I can run in React, Qwik, Vue, Solid, or Liquid!
      </div>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid Section 1`] = `
"function SectionComponent(props) {
  return (
    <section
      {...props.attributes}
      style={
        props.maxWidth && typeof props.maxWidth === \\"number\\"
          ? {
              \\"max-width\\": props.maxWidth,
            }
          : undefined
      }
    >
      {props.children}
    </section>
  );
}

export default SectionComponent;
"
`;

exports[`Solid Section 2`] = `
"import { Show, For, createSignal } from \\"solid-js\\";

function SectionStateComponent(props) {
  const [max, setMax] = createSignal(42);

  const [items, setItems] = createSignal([42]);

  return (
    <Show when={max()}>
      <For each={items()}>
        {(item, _index) => {
          const index = _index();
          return (
            <section
              {...props.attributes}
              style={{
                \\"max-width\\": item + max(),
              }}
            >
              {props.children}
            </section>
          );
        }}
      </For>
    </Show>
  );
}

export default SectionStateComponent;
"
`;

exports[`Solid Section 3`] = `
"import { css } from \\"solid-styled-components\\";

function SectionComponent(props) {
  return (
    <>
      <section
        {...props.attributes}
        style={
          props.maxWidth && typeof props.maxWidth === \\"number\\"
            ? {
                \\"max-width\\": props.maxWidth,
              }
            : undefined
        }
      >
        {props.children}
      </section>
    </>
  );
}

export default SectionComponent;
"
`;

exports[`Solid Section 4`] = `
"import { Show, For, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function SectionStateComponent(props) {
  const [max, setMax] = createSignal(42);

  const [items, setItems] = createSignal([42]);

  return (
    <>
      <Show when={max()}>
        <For each={items()}>
          {(item, _index) => {
            const index = _index();
            return (
              <section
                {...props.attributes}
                style={{
                  \\"max-width\\": item + max(),
                }}
              >
                {props.children}
              </section>
            );
          }}
        </For>
      </Show>
    </>
  );
}

export default SectionStateComponent;
"
`;

exports[`Solid Select 1`] = `
"import { For } from \\"solid-js\\";

import { Builder } from \\"@builder.io/sdk\\";

function SelectComponent(props) {
  return (
    <select
      {...props.attributes}
      value={props.value}
      key={
        Builder.isEditing && props.defaultValue
          ? props.defaultValue
          : \\"default-key\\"
      }
      defaultValue={props.defaultValue}
      name={props.name}
    >
      <For each={props.options}>
        {(option, _index) => {
          const index = _index();
          return (
            <option value={option.value} data-index={index}>
              {option.name || option.value}
            </option>
          );
        }}
      </For>
    </select>
  );
}

export default SelectComponent;
"
`;

exports[`Solid Select 2`] = `
"import { For } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

import { Builder } from \\"@builder.io/sdk\\";

function SelectComponent(props) {
  return (
    <>
      <select
        {...props.attributes}
        value={props.value}
        key={
          Builder.isEditing && props.defaultValue
            ? props.defaultValue
            : \\"default-key\\"
        }
        defaultValue={props.defaultValue}
        name={props.name}
      >
        <For each={props.options}>
          {(option, _index) => {
            const index = _index();
            return (
              <option value={option.value} data-index={index}>
                {option.name || option.value}
              </option>
            );
          }}
        </For>
      </select>
    </>
  );
}

export default SelectComponent;
"
`;

exports[`Solid SlotHtml 1`] = `
"import ContentSlotCode from \\"./content-slot-jsx.raw\\";

function SlotCode(props) {
  return (
    <div>
      <ContentSlotCode>
        <Slot testing={<div>Hello</div>}></Slot>
      </ContentSlotCode>
    </div>
  );
}

export default SlotCode;
"
`;

exports[`Solid SlotHtml 2`] = `
"import { css } from \\"solid-styled-components\\";

import ContentSlotCode from \\"./content-slot-jsx.raw\\";

function SlotCode(props) {
  return (
    <>
      <div>
        <ContentSlotCode>
          <Slot testing={<div>Hello</div>}></Slot>
        </ContentSlotCode>
      </div>
    </>
  );
}

export default SlotCode;
"
`;

exports[`Solid SlotJsx 1`] = `
"import ContentSlotCode from \\"./content-slot-jsx.raw\\";

function SlotCode(props) {
  return (
    <div>
      <ContentSlotCode slotTesting={<div>Hello</div>}></ContentSlotCode>
    </div>
  );
}

export default SlotCode;
"
`;

exports[`Solid SlotJsx 2`] = `
"import { css } from \\"solid-styled-components\\";

import ContentSlotCode from \\"./content-slot-jsx.raw\\";

function SlotCode(props) {
  return (
    <>
      <div>
        <ContentSlotCode slotTesting={<div>Hello</div>}></ContentSlotCode>
      </div>
    </>
  );
}

export default SlotCode;
"
`;

exports[`Solid Stamped.io 1`] = `
"import { Show, For, onMount, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

import { kebabCase } from \\"lodash\\";
import { snakeCase } from \\"lodash\\";

function SmileReviews(props) {
  const [reviews, setReviews] = createSignal([]);

  const [name, setName] = createSignal(\\"test\\");

  const [showReviewPrompt, setShowReviewPrompt] = createSignal(false);

  function kebabCaseValue() {
    return kebabCase(\\"testThat\\");
  }

  function snakeCaseValue() {
    return snakeCase(\\"testThis\\");
  }

  onMount(() => {
    fetch(
      \`https://stamped.io/api/widget/reviews?storeUrl=builder-io.myshopify.com&apiKey=\${
        props.apiKey || \\"pubkey-8bbDq7W6w4sB3OWeM1HUy2s47702hM\\"
      }&productId=\${props.productId || \\"2410511106127\\"}\`
    )
      .then((res) => res.json())
      .then((data) => {
        setReviews(data.data);
      });
  });

  return (
    <div data-user={name()}>
      <button onClick={(event) => setShowReviewPrompt(true)}>
        Write a review
      </button>
      <Show when={showReviewPrompt()}>
        <input placeholder=\\"Email\\" />
        <input
          class={css({
            display: \\"block\\",
          })}
          placeholder=\\"Title\\"
        />
        <textarea
          class={css({
            display: \\"block\\",
          })}
          placeholder=\\"How was your experience?\\"
        ></textarea>
        <button
          class={css({
            display: \\"block\\",
          })}
          onClick={(event) => {
            event.preventDefault();
            setShowReviewPrompt(false);
          }}
        >
          Submit
        </button>
      </Show>
      <For each={reviews()}>
        {(review, _index) => {
          const index = _index();
          return (
            <div
              class={css({
                margin: \\"10px\\",
                padding: \\"10px\\",
                background: \\"white\\",
                display: \\"flex\\",
                borderRadius: \\"5px\\",
                boxShadow: \\"0 2px 5px rgba(0, 0, 0, 0.1)\\",
              })}
              key={review.id}
            >
              <img
                class={css({
                  height: \\"30px\\",
                  width: \\"30px\\",
                  marginRight: \\"10px\\",
                })}
                src={review.avatar}
              />
              <div class={showReviewPrompt() ? \\"bg-primary\\" : \\"bg-secondary\\"}>
                <div>
                  N:
                  {index}
                </div>
                <div>{review.author}</div>
                <div>{review.reviewMessage}</div>
              </div>
            </div>
          );
        }}
      </For>
    </div>
  );
}

export default SmileReviews;
"
`;

exports[`Solid Stamped.io 2`] = `
"import { Show, For, onMount, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

import { kebabCase } from \\"lodash\\";
import { snakeCase } from \\"lodash\\";

function SmileReviews(props) {
  const [reviews, setReviews] = createSignal([]);

  const [name, setName] = createSignal(\\"test\\");

  const [showReviewPrompt, setShowReviewPrompt] = createSignal(false);

  function kebabCaseValue() {
    return kebabCase(\\"testThat\\");
  }

  function snakeCaseValue() {
    return snakeCase(\\"testThis\\");
  }

  onMount(() => {
    fetch(
      \`https://stamped.io/api/widget/reviews?storeUrl=builder-io.myshopify.com&apiKey=\${
        props.apiKey || \\"pubkey-8bbDq7W6w4sB3OWeM1HUy2s47702hM\\"
      }&productId=\${props.productId || \\"2410511106127\\"}\`
    )
      .then((res) => res.json())
      .then((data) => {
        setReviews(data.data);
      });
  });

  return (
    <>
      <div data-user={name()}>
        <button onClick={(event) => setShowReviewPrompt(true)}>
          Write a review
        </button>
        <Show when={showReviewPrompt()}>
          <input placeholder=\\"Email\\" />
          <input class=\\"input-517ca2ac\\" placeholder=\\"Title\\" />
          <textarea
            class=\\"textarea-517ca2ac\\"
            placeholder=\\"How was your experience?\\"
          ></textarea>
          <button
            class=\\"button-517ca2ac\\"
            onClick={(event) => {
              event.preventDefault();
              setShowReviewPrompt(false);
            }}
          >
            Submit
          </button>
        </Show>
        <For each={reviews()}>
          {(review, _index) => {
            const index = _index();
            return (
              <div class=\\"div-517ca2ac\\" key={review.id}>
                <img class=\\"img-517ca2ac\\" src={review.avatar} />
                <div class={showReviewPrompt() ? \\"bg-primary\\" : \\"bg-secondary\\"}>
                  <div>
                    N:
                    {index}
                  </div>
                  <div>{review.author}</div>
                  <div>{review.reviewMessage}</div>
                </div>
              </div>
            );
          }}
        </For>
      </div>
      <style jsx>{\`
        .input-517ca2ac {
          display: block;
        }
        .textarea-517ca2ac {
          display: block;
        }
        .button-517ca2ac {
          display: block;
        }
        .div-517ca2ac {
          margin: 10px;
          padding: 10px;
          background: white;
          display: flex;
          border-radius: 5px;
          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }
        .img-517ca2ac {
          height: 30px;
          width: 30px;
          margin-right: 10px;
        }
      \`}</style>
    </>
  );
}

export default SmileReviews;
"
`;

exports[`Solid Submit 1`] = `
"function SubmitButton(props) {
  return (
    <button {...props.attributes} type=\\"submit\\">
      {props.text}
    </button>
  );
}

export default SubmitButton;
"
`;

exports[`Solid Submit 2`] = `
"import { css } from \\"solid-styled-components\\";

function SubmitButton(props) {
  return (
    <>
      <button {...props.attributes} type=\\"submit\\">
        {props.text}
      </button>
    </>
  );
}

export default SubmitButton;
"
`;

exports[`Solid Text 1`] = `
"import { createSignal } from \\"solid-js\\";

import { Builder } from \\"@builder.io/sdk\\";

function Text(props) {
  const [name, setName] = createSignal(\\"Decadef20\\");

  return (
    <div
      contentEditable={allowEditingText || undefined}
      data-name={{
        test: name() || \\"any name\\",
      }}
      innerHTML={
        props.text ||
        props.content ||
        name() ||
        '<p class=\\"text-lg\\">my name</p>'
      }
    ></div>
  );
}

export default Text;
"
`;

exports[`Solid Text 2`] = `
"import { createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

import { Builder } from \\"@builder.io/sdk\\";

function Text(props) {
  const [name, setName] = createSignal(\\"Decadef20\\");

  return (
    <>
      <div
        contentEditable={allowEditingText || undefined}
        data-name={{
          test: name() || \\"any name\\",
        }}
        innerHTML={
          props.text ||
          props.content ||
          name() ||
          '<p class=\\"text-lg\\">my name</p>'
        }
      ></div>
    </>
  );
}

export default Text;
"
`;

exports[`Solid Textarea 1`] = `
"function Textarea(props) {
  return (
    <textarea
      {...props.attributes}
      placeholder={props.placeholder}
      name={props.name}
      value={props.value}
      defaultValue={props.defaultValue}
    ></textarea>
  );
}

export default Textarea;
"
`;

exports[`Solid Textarea 2`] = `
"import { css } from \\"solid-styled-components\\";

function Textarea(props) {
  return (
    <>
      <textarea
        {...props.attributes}
        placeholder={props.placeholder}
        name={props.name}
        value={props.value}
        defaultValue={props.defaultValue}
      ></textarea>
    </>
  );
}

export default Textarea;
"
`;

exports[`Solid Video 1`] = `
"function Video(props) {
  return (
    <video
      {...props.attributes}
      preload=\\"none\\"
      style={{
        width: \\"100%\\",
        height: \\"100%\\",
        ...props.attributes?.style,
        \\"object-fit\\": props.fit,
        \\"object-position\\": props.position,
        // Hack to get object fit to work as expected and
        // not have the video overflow
        \\"border-radius\\": 1,
      }}
      key={props.video || \\"no-src\\"}
      poster={props.posterImage}
      autoplay={props.autoPlay}
      muted={props.muted}
      controls={props.controls}
      loop={props.loop}
    ></video>
  );
}

export default Video;
"
`;

exports[`Solid Video 2`] = `
"import { css } from \\"solid-styled-components\\";

function Video(props) {
  return (
    <>
      <video
        {...props.attributes}
        preload=\\"none\\"
        style={{
          width: \\"100%\\",
          height: \\"100%\\",
          ...props.attributes?.style,
          \\"object-fit\\": props.fit,
          \\"object-position\\": props.position,
          // Hack to get object fit to work as expected and
          // not have the video overflow
          \\"border-radius\\": 1,
        }}
        key={props.video || \\"no-src\\"}
        poster={props.posterImage}
        autoplay={props.autoPlay}
        muted={props.muted}
        controls={props.controls}
        loop={props.loop}
      ></video>
    </>
  );
}

export default Video;
"
`;

exports[`Solid basicOnUpdateReturn 1`] = `
"import { on, createEffect, createSignal } from \\"solid-js\\";

function MyBasicOnUpdateReturnComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  function onUpdateFn_0() {
    const controller = new AbortController();
    const signal = controller.signal;
    fetch(\\"https://patrickjs.com/api/resource.json\\", {
      signal,
    })
      .then((response) => response.json())
      .then((data) => {
        setName(data.name);
      });
    return () => {
      if (!signal.aborted) {
        controller.abort();
      }
    };
  }
  createEffect(on(() => [name()], onUpdateFn_0));

  return (
    <div>
      Hello!
      {name()}
    </div>
  );
}

export default MyBasicOnUpdateReturnComponent;
"
`;

exports[`Solid basicOnUpdateReturn 2`] = `
"import { on, createEffect, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicOnUpdateReturnComponent(props) {
  const [name, setName] = createSignal(\\"PatrickJS\\");

  function onUpdateFn_0() {
    const controller = new AbortController();
    const signal = controller.signal;
    fetch(\\"https://patrickjs.com/api/resource.json\\", {
      signal,
    })
      .then((response) => response.json())
      .then((data) => {
        setName(data.name);
      });
    return () => {
      if (!signal.aborted) {
        controller.abort();
      }
    };
  }
  createEffect(on(() => [name()], onUpdateFn_0));

  return (
    <>
      <div>
        Hello!
        {name()}
      </div>
    </>
  );
}

export default MyBasicOnUpdateReturnComponent;
"
`;

exports[`Solid class + ClassName + css 1`] = `
"import { css } from \\"solid-styled-components\\";

function MyBasicComponent(props) {
  return (
    <div
      class={
        \\"test2 test \\" +
        css({
          padding: \\"10px\\",
        })
      }
    >
      Hello! I can run in React, Vue, Solid, or Liquid!
    </div>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid class + ClassName + css 2`] = `
"import { css } from \\"solid-styled-components\\";

function MyBasicComponent(props) {
  return (
    <>
      <div class=\\"test2 test div-45c59d97\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
      <style jsx>{\`
        .div-45c59d97 {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid class + css 1`] = `
"import { css } from \\"solid-styled-components\\";

function MyBasicComponent(props) {
  return (
    <div
      class={
        \\"test \\" +
        css({
          padding: \\"10px\\",
        })
      }
    >
      Hello! I can run in React, Vue, Solid, or Liquid!
    </div>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid class + css 2`] = `
"import { css } from \\"solid-styled-components\\";

function MyBasicComponent(props) {
  return (
    <>
      <div class=\\"test div-74a0302e\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
      <style jsx>{\`
        .div-74a0302e {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid className + css 1`] = `
"import { css } from \\"solid-styled-components\\";

function MyBasicComponent(props) {
  return (
    <div
      class={
        \\"test \\" +
        css({
          padding: \\"10px\\",
        })
      }
    >
      Hello! I can run in React, Vue, Solid, or Liquid!
    </div>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid className + css 2`] = `
"import { css } from \\"solid-styled-components\\";

function MyBasicComponent(props) {
  return (
    <>
      <div class=\\"test div-74a0302e\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
      <style jsx>{\`
        .div-74a0302e {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid className 1`] = `
"import { createSignal } from \\"solid-js\\";

function ClassNameCode(props) {
  const [bindings, setBindings] = createSignal(\\"a binding\\");

  return (
    <div>
      <div class=\\"no binding\\">Without Binding</div>
      <div class={bindings()}>With binding</div>
    </div>
  );
}

export default ClassNameCode;
"
`;

exports[`Solid className 2`] = `
"import { createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function ClassNameCode(props) {
  const [bindings, setBindings] = createSignal(\\"a binding\\");

  return (
    <>
      <div>
        <div class=\\"no binding\\">Without Binding</div>
        <div class={bindings()}>With binding</div>
      </div>
    </>
  );
}

export default ClassNameCode;
"
`;

exports[`Solid classState 1`] = `
"import { createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicComponent(props) {
  const [classState, setClassState] = createSignal(\\"testClassName\\");

  const [styleState, setStyleState] = createSignal({
    color: \\"red\\",
  });

  return (
    <div
      class={
        classState() +
        \\" \\" +
        css({
          padding: \\"10px\\",
        })
      }
      style={styleState()}
    >
      Hello! I can run in React, Vue, Solid, or Liquid!
    </div>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid classState 2`] = `
"import { createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicComponent(props) {
  const [classState, setClassState] = createSignal(\\"testClassName\\");

  const [styleState, setStyleState] = createSignal({
    color: \\"red\\",
  });

  return (
    <>
      <div class={classState() + \\" div-61288f44\\"} style={styleState()}>
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
      <style jsx>{\`
        .div-61288f44 {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid defaultProps 1`] = `
"import { Show } from \\"solid-js\\";

function Button(props) {
  return (
    <>
      <Show when={props.link}>
        <a
          {...props.attributes}
          href={props.link}
          target={props.openLinkInNewTab ? \\"_blank\\" : undefined}
        >
          {props.text}
        </a>
      </Show>
      <Show when={!props.link}>
        <button {...props.attributes} type=\\"button\\">
          {props.text}
        </button>
      </Show>
    </>
  );
}

export default Button;
"
`;

exports[`Solid defaultProps 2`] = `
"import { Show } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function Button(props) {
  return (
    <>
      <>
        <Show when={props.link}>
          <a
            {...props.attributes}
            href={props.link}
            target={props.openLinkInNewTab ? \\"_blank\\" : undefined}
          >
            {props.text}
          </a>
        </Show>
        <Show when={!props.link}>
          <button {...props.attributes} type=\\"button\\">
            {props.text}
          </button>
        </Show>
      </>
    </>
  );
}

export default Button;
"
`;

exports[`Solid defaultValsWithTypes 1`] = `
"const DEFAULT_VALUES: Props = {
  name: \\"Sami\\",
};

function ComponentWithTypes(props) {
  return (
    <div>
      Hello
      {props.name || DEFAULT_VALUES.name}
    </div>
  );
}

export default ComponentWithTypes;
"
`;

exports[`Solid defaultValsWithTypes 2`] = `
"import { css } from \\"solid-styled-components\\";

const DEFAULT_VALUES: Props = {
  name: \\"Sami\\",
};

function ComponentWithTypes(props) {
  return (
    <>
      <div>
        Hello
        {props.name || DEFAULT_VALUES.name}
      </div>
    </>
  );
}

export default ComponentWithTypes;
"
`;

exports[`Solid multipleOnUpdate 1`] = `
"import { on, createEffect } from \\"solid-js\\";

function MultipleOnUpdate(props) {
  return <div></div>;
}

export default MultipleOnUpdate;
"
`;

exports[`Solid multipleOnUpdate 2`] = `
"import { on, createEffect } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MultipleOnUpdate(props) {
  return (
    <>
      <div></div>
    </>
  );
}

export default MultipleOnUpdate;
"
`;

exports[`Solid multipleOnUpdateWithDeps 1`] = `
"import { on, createEffect, createSignal } from \\"solid-js\\";

function MultipleOnUpdateWithDeps(props) {
  const [a, setA] = createSignal(\\"a\\");

  const [b, setB] = createSignal(\\"b\\");

  const [c, setC] = createSignal(\\"c\\");

  const [d, setD] = createSignal(\\"d\\");

  function onUpdateFn_0() {
    console.log(\\"Runs when a or b changes\\", a(), b());

    if (a() === \\"a\\") {
      setA(\\"b\\");
    }
  }
  createEffect(on(() => [a(), b()], onUpdateFn_0));

  function onUpdateFn_1() {
    console.log(\\"Runs when c or d changes\\", c(), d());

    if (a() === \\"a\\") {
      setA(\\"b\\");
    }
  }
  createEffect(on(() => [c(), d()], onUpdateFn_1));

  return <div></div>;
}

export default MultipleOnUpdateWithDeps;
"
`;

exports[`Solid multipleOnUpdateWithDeps 2`] = `
"import { on, createEffect, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MultipleOnUpdateWithDeps(props) {
  const [a, setA] = createSignal(\\"a\\");

  const [b, setB] = createSignal(\\"b\\");

  const [c, setC] = createSignal(\\"c\\");

  const [d, setD] = createSignal(\\"d\\");

  function onUpdateFn_0() {
    console.log(\\"Runs when a or b changes\\", a(), b());

    if (a() === \\"a\\") {
      setA(\\"b\\");
    }
  }
  createEffect(on(() => [a(), b()], onUpdateFn_0));

  function onUpdateFn_1() {
    console.log(\\"Runs when c or d changes\\", c(), d());

    if (a() === \\"a\\") {
      setA(\\"b\\");
    }
  }
  createEffect(on(() => [c(), d()], onUpdateFn_1));

  return (
    <>
      <div></div>
    </>
  );
}

export default MultipleOnUpdateWithDeps;
"
`;

exports[`Solid nestedShow 1`] = `
"import { Show } from \\"solid-js\\";

function NestedShow(props) {
  return (
    <Show fallback={<div>else-condition-A</div>} when={props.conditionA}>
      <Show fallback={<div>else-condition-B</div>} when={!props.conditionB}>
        <div>if condition A and condition B</div>
      </Show>
    </Show>
  );
}

export default NestedShow;
"
`;

exports[`Solid nestedShow 2`] = `
"import { Show } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function NestedShow(props) {
  return (
    <>
      <Show fallback={<div>else-condition-A</div>} when={props.conditionA}>
        <Show fallback={<div>else-condition-B</div>} when={!props.conditionB}>
          <div>if condition A and condition B</div>
        </Show>
      </Show>
    </>
  );
}

export default NestedShow;
"
`;

exports[`Solid nestedStyles 1`] = `
"import { css } from \\"solid-styled-components\\";

function NestedStyles(props) {
  return (
    <div
      class={css({
        display: \\"flex\\",
        foo: \\"var(--bar)\\",
        \\"@media (max-width: env(--mobile))\\": {
          display: \\"block\\",
        },
        \\"&:hover\\": {
          display: \\"flex\\",
        },
        \\".nested-selector\\": {
          display: \\"grid\\",
        },
      })}
    >
      Hello world
    </div>
  );
}

export default NestedStyles;
"
`;

exports[`Solid nestedStyles 2`] = `
"import { css } from \\"solid-styled-components\\";

function NestedStyles(props) {
  return (
    <>
      <div class=\\"div-92502f5c\\">Hello world</div>
      <style jsx>{\`
        .div-92502f5c {
          display: flex;
          foo: var(--bar);
        }
        @media (max-width: env(--mobile)) {
          .div-92502f5c {
            display: block;
          }
        }
        .div-92502f5c:hover {
          display: flex;
        }
        .div-92502f5c .nested-selector {
          display: grid;
        }
      \`}</style>
    </>
  );
}

export default NestedStyles;
"
`;

exports[`Solid onInit & onMount 1`] = `
"import { onMount } from \\"solid-js\\";

function OnInit(props) {
  onMount(() => {
    console.log(\\"onMount\\");
  });

  return <div></div>;
}

export default OnInit;
"
`;

exports[`Solid onInit & onMount 2`] = `
"import { onMount } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function OnInit(props) {
  onMount(() => {
    console.log(\\"onMount\\");
  });

  return (
    <>
      <div></div>
    </>
  );
}

export default OnInit;
"
`;

exports[`Solid onInit 1`] = `
"import { createSignal } from \\"solid-js\\";

export const defaultValues = {
  name: \\"PatrickJS\\",
};

function OnInit(props) {
  const [name, setName] = createSignal(\\"\\");

  return (
    <div>
      Default name defined by parent
      {name()}
    </div>
  );
}

export default OnInit;
"
`;

exports[`Solid onInit 2`] = `
"import { createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

export const defaultValues = {
  name: \\"PatrickJS\\",
};

function OnInit(props) {
  const [name, setName] = createSignal(\\"\\");

  return (
    <>
      <div>
        Default name defined by parent
        {name()}
      </div>
    </>
  );
}

export default OnInit;
"
`;

exports[`Solid onMount 1`] = `
"import { onMount } from \\"solid-js\\";

function Comp(props) {
  onMount(() => {
    console.log(\\"Runs on mount\\");
  });

  return <div></div>;
}

export default Comp;
"
`;

exports[`Solid onMount 2`] = `
"import { onMount } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function Comp(props) {
  onMount(() => {
    console.log(\\"Runs on mount\\");
  });

  return (
    <>
      <div></div>
    </>
  );
}

export default Comp;
"
`;

exports[`Solid onUpdate 1`] = `
"import { on, createEffect } from \\"solid-js\\";

function OnUpdate(props) {
  return <div></div>;
}

export default OnUpdate;
"
`;

exports[`Solid onUpdate 2`] = `
"import { on, createEffect } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function OnUpdate(props) {
  return (
    <>
      <div></div>
    </>
  );
}

export default OnUpdate;
"
`;

exports[`Solid onUpdateWithDeps 1`] = `
"import { on, createEffect, createSignal } from \\"solid-js\\";

function OnUpdateWithDeps(props) {
  const [a, setA] = createSignal(\\"a\\");

  const [b, setB] = createSignal(\\"b\\");

  function onUpdateFn_0() {
    console.log(\\"Runs when a or b changes\\", a(), b());
  }
  createEffect(on(() => [a(), b()], onUpdateFn_0));

  return <div></div>;
}

export default OnUpdateWithDeps;
"
`;

exports[`Solid onUpdateWithDeps 2`] = `
"import { on, createEffect, createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function OnUpdateWithDeps(props) {
  const [a, setA] = createSignal(\\"a\\");

  const [b, setB] = createSignal(\\"b\\");

  function onUpdateFn_0() {
    console.log(\\"Runs when a or b changes\\", a(), b());
  }
  createEffect(on(() => [a(), b()], onUpdateFn_0));

  return (
    <>
      <div></div>
    </>
  );
}

export default OnUpdateWithDeps;
"
`;

exports[`Solid preserveExportOrLocalStatement 1`] = `
"const b = 3;
const foo = () => {};
export const a = 3;
export const bar = () => {};
export function run<T>(value: T) {}

function MyBasicComponent(props) {
  return <div></div>;
}

export default MyBasicComponent;
"
`;

exports[`Solid preserveExportOrLocalStatement 2`] = `
"import { css } from \\"solid-styled-components\\";

const b = 3;
const foo = () => {};
export const a = 3;
export const bar = () => {};
export function run<T>(value: T) {}

function MyBasicComponent(props) {
  return (
    <>
      <div></div>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid preserveTyping 1`] = `
"function MyBasicComponent(props) {
  return (
    <div>
      Hello! I can run in React, Vue, Solid, or Liquid!
      {props.name}
    </div>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid preserveTyping 2`] = `
"import { css } from \\"solid-styled-components\\";

function MyBasicComponent(props) {
  return (
    <>
      <div>
        Hello! I can run in React, Vue, Solid, or Liquid!
        {props.name}
      </div>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid propsDestructure 1`] = `
"import { createSignal } from \\"solid-js\\";

function MyBasicComponent(props) {
  const [name, setName] = createSignal(\\"Decadef20\\");

  return (
    <div>
      {props.children}
      {props.type}
      Hello! I can run in React, Vue, Solid, or Liquid!
    </div>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid propsDestructure 2`] = `
"import { createSignal } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyBasicComponent(props) {
  const [name, setName] = createSignal(\\"Decadef20\\");

  return (
    <>
      <div>
        {props.children}
        {props.type}
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid propsInterface 1`] = `
"function MyBasicComponent(props) {
  return (
    <div>
      Hello! I can run in React, Vue, Solid, or Liquid!
      {props.name}
    </div>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid propsInterface 2`] = `
"import { css } from \\"solid-styled-components\\";

function MyBasicComponent(props) {
  return (
    <>
      <div>
        Hello! I can run in React, Vue, Solid, or Liquid!
        {props.name}
      </div>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid propsType 1`] = `
"function MyBasicComponent(props) {
  return (
    <div>
      Hello! I can run in React, Vue, Solid, or Liquid!
      {props.name}
    </div>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid propsType 2`] = `
"import { css } from \\"solid-styled-components\\";

function MyBasicComponent(props) {
  return (
    <>
      <div>
        Hello! I can run in React, Vue, Solid, or Liquid!
        {props.name}
      </div>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`Solid rootShow 1`] = `
"import { Show } from \\"solid-js\\";

function RenderStyles(props) {
  return (
    <Show fallback={<div>Foo</div>} when={props.foo === \\"bar\\"}>
      <div>Bar</div>
    </Show>
  );
}

export default RenderStyles;
"
`;

exports[`Solid rootShow 2`] = `
"import { Show } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function RenderStyles(props) {
  return (
    <>
      <Show fallback={<div>Foo</div>} when={props.foo === \\"bar\\"}>
        <div>Bar</div>
      </Show>
    </>
  );
}

export default RenderStyles;
"
`;

exports[`Solid self-referencing component 1`] = `
"import { Show } from \\"solid-js\\";

function MyComponent(props) {
  return (
    <div>
      {props.name}
      <Show when={props.name === \\"Batman\\"}>
        <MyComponent name=\\"Bruce Wayne\\"></MyComponent>
      </Show>
    </div>
  );
}

export default MyComponent;
"
`;

exports[`Solid self-referencing component 2`] = `
"import { Show } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyComponent(props) {
  return (
    <>
      <div>
        {props.name}
        <Show when={props.name === \\"Batman\\"}>
          <MyComponent name=\\"Bruce Wayne\\"></MyComponent>
        </Show>
      </div>
    </>
  );
}

export default MyComponent;
"
`;

exports[`Solid self-referencing component with children 1`] = `
"import { Show } from \\"solid-js\\";

function MyComponent(props) {
  return (
    <div>
      {props.name}
      {props.children}
      <Show when={props.name === \\"Batman\\"}>
        <MyComponent name=\\"Bruce\\">
          <div>Wayne</div>
        </MyComponent>
      </Show>
    </div>
  );
}

export default MyComponent;
"
`;

exports[`Solid self-referencing component with children 2`] = `
"import { Show } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function MyComponent(props) {
  return (
    <>
      <div>
        {props.name}
        {props.children}
        <Show when={props.name === \\"Batman\\"}>
          <MyComponent name=\\"Bruce\\">
            <div>Wayne</div>
          </MyComponent>
        </Show>
      </div>
    </>
  );
}

export default MyComponent;
"
`;

exports[`Solid showWithFor 1`] = `
"import { Show, For } from \\"solid-js\\";

function NestedShow(props) {
  return (
    <Show fallback={<div>else-condition-A</div>} when={props.conditionA}>
      <For each={props.items}>
        {(item, _index) => {
          const index = _index();
          return <div key={idx}>{item}</div>;
        }}
      </For>
    </Show>
  );
}

export default NestedShow;
"
`;

exports[`Solid showWithFor 2`] = `
"import { Show, For } from \\"solid-js\\";

import { css } from \\"solid-styled-components\\";

function NestedShow(props) {
  return (
    <>
      <Show fallback={<div>else-condition-A</div>} when={props.conditionA}>
        <For each={props.items}>
          {(item, _index) => {
            const index = _index();
            return <div key={idx}>{item}</div>;
          }}
        </For>
      </Show>
    </>
  );
}

export default NestedShow;
"
`;

exports[`Solid subComponent 1`] = `
"import Foo from \\"./foo-sub-component.jsx\\";

function SubComponent(props) {
  return <Foo></Foo>;
}

export default SubComponent;
"
`;

exports[`Solid subComponent 2`] = `
"import { css } from \\"solid-styled-components\\";

import Foo from \\"./foo-sub-component.jsx\\";

function SubComponent(props) {
  return (
    <>
      <Foo></Foo>
    </>
  );
}

export default SubComponent;
"
`;

exports[`Solid typeDependency 1`] = `
"function TypeDependency(props) {
  return <div>{props.foo}</div>;
}

export default TypeDependency;
"
`;

exports[`Solid typeDependency 2`] = `
"import { css } from \\"solid-styled-components\\";

function TypeDependency(props) {
  return (
    <>
      <div>{props.foo}</div>
    </>
  );
}

export default TypeDependency;
"
`;
